Loc update-Dec21

--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -44,7 +44,9 @@
     href: exam-item-challenge-process.md
   - name: Бета-экзамены
     href: beta-exams.md
-  - name: Получение кредитов за сертификационные экзамены
+  - name: Кредиты колледжа ACE за сертификационные экзамены.
+    href: ace-credit-for-certification-exams.md
+  - name: Кредиты колледжа NCCRS за сертификационные экзамены
     href: college-credit-for-certification-exams.md
   - name: Студенческие скидки
     href: student-discounts.md
