--- a/learn-certs-pr/azure-solutions-architect.yml
+++ b/learn-certs-pr/azure-solutions-architect.yml
@@ -8,7 +8,7 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Кандидаты на сертификацию эксперта по архитектуре Azure Solutions Architect Expert должны обладать специальными знаниями в области разработки и реализации решений, работающих на Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранение и безопасность.
+  Кандидаты на сертификацию эксперта по архитектуре Azure Solutions Architect Expert должны обладать специальными знаниями в области разработки и реализации решений, работающих на Microsoft Azure, включая такие аспекты, как вычисления, сеть, хранение и безопасность. У кандидатов должны быть навыки среднего уровня по администрированию Azure. Кандидаты должны понимать разработку в Azure и процессы DevOps.
 
   Обязанности этой роли включают консультирование заинтересованных сторон и перевод требований бизнеса в безопасные, масштабируемые и надежные облачные решения.
 
