--- a/learn-certs-pr/courses/az-304t00.yml
+++ b/learn-certs-pr/courses/az-304t00.yml
@@ -38,11 +38,20 @@ summary: |-
   #### Профиль аудитории
   Этот курс предназначен для IT-специалистов, имеющих опыт разработки и внедрения решений, работающих на Microsoft Azure. Они должны обладать обширным знанием IТ-операций, включая сетевые технологии, виртуализацию, идентификацию, безопасность, непрерывность бизнеса, аварийное восстановление, платформы данных, бюджетирование и управление. Azure Solution Architects используют Azure Portal, и по мере того, как они становятся более опытными, они начинают использовать интерфейс командной строки (CLI). Кандидаты должны быть экспертами в администрировании Azure и иметь опыт работы с процессами разработки Azure и процессами DevOps.
 prerequisitesSection: |-
-  Успешные архитекторы Azure Solution начинают эту роль с работы с операционными системами, виртуализацией, облачной инфраструктурой, структурами хранения и сетями.
+  Успешные архитекторы Azure начинают эту роль, имея опыт работы с операционными системами, визуализацией, инфраструктурой cloud, структурами хранения, сетями, приложениями и базами данных.
+  
   - Понимание локальных технологий виртуализации, включая&#58; виртуальные машины, виртуальные сети и виртуальные жесткие диски.
   - Понимание конфигурации сети, включая TCP/IP, систему доменных имен (DNS), виртуальные частные сети (VPN), брандмауэры и технологии шифрования.
   - Понимание концепций Active Directory, включая домены, леса, контроллеры доменов, репликацию, протокол Kerberos и протокол облегченного доступа к каталогам (LDAP).
   - Понимание устойчивости и аварийного восстановления, включая операции резервного копирования и восстановления.
+  - Понимание разработки приложений и APIs. 
+  - Понимание баз данных, как SQL, например, MS SQL, MySQL и Postgres, так и отличных от SQL, например, MongoDB. 
+  - Понимание отделения приложений и служб, например, очередей, таблиц, кэша.  
+  - Понимание понятий безопасности для защиты вашей среды, например, шифрования неактивных данных, шифрования данных при передаче, SSL, TLS.
+
+  Предварительные курсы (или эквивалентные знания)&#58;
+  - AZ-900 Azure Fundamentals.
+  - AZ-303 Azure Solution Architect Technologies. 
 outlineSection: |-
   ### Модуль 1&#58; Разработка вычислительных решений
   В этом модуле вы узнаете о соответствующих вычислительных технологиях, включая виртуальные машины, службы приложений App Services, Service Fabric, Azure Functions, Windows Virtual Desktop и контейнеры.
