--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -9,10 +9,13 @@ courseNumber: 'AZ-900T01-A'
 hoursToComplete: 24
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: Понимание общих концепций облачных вычислений
-- skill: Понимание основных служб, доступных в Microsoft Azure
-- skill: Понимать безопасность, конфиденциальность, соответствие и доверие с Microsoft Azure.
-- skill: Понимание ценообразования и моделей поддержки, доступных в Microsoft
+- skill: Обсуждать основы вычислений cloud и Azure и начало работы с подписками и учетными записями Azure. 
+- skill: Описывать преимущества использования служб вычислений cloud, различия между категориями и типами вычислений cloud и процесс изучения различных понятий, ресурсов и терминологии, необходимой для работы с архитектурой Azure.
+- skill: В общих чертах описывать основные службы, доступные с Microsoft Azure.
+- skill: Обсуждать основные решения, охватывающие широкий комплекс инструментов и служб из Microsoft Azure. 
+- skill: Описывать функции общей безопасности и безопасности сети, а также варианты использования различных служб Azure для способствования обеспечению безопасности, защиты и надежности ваших ресурсов cloud.
+- skill: Обсуждать функции удостоверений, управления, конфиденциальности и обеспечения соответствия, а также то, как Azure может помочь вам защитить доступ к ресурсам cloud, что значит создать стратегию управления cloud и как Azure обеспечивает соблюдение общепринятых нормативных стандартов и стандартов соответствия требованиям.
+- skill: Обсуждать факторы, влияющие на стоимость; инструменты, которые вы можете использовать в целях оценки расходов cloud и управления такими расходами; как service-level agreements (SLAs) Azure могут влиять на решения в отношении структуры ваших приложений.
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
 - en
@@ -32,59 +35,114 @@ products:
 exams:
 - uid: exam.az-900
 summary: |-
-  Этот однодневный курс обеспечит базовые знания об облачных концепциях; основных службах Azure; безопасности, конфиденциальности, соответствии и доверии; а также о ценообразование и поддержке в Azure.
+  Этот однодневный курс предоставит знания фундаментального уровня о понятиях Azure; основных службах Azure; основных решениях и инструментах управления; общей безопасности и безопасности сети; функциях управления, конфиденциальности и соответствия; управлении затратами и service level agreements Azure.
 
   Примечание&#58; Этот курс не является пропуском Azure и не предоставляет время для участия слушателей в практических занятиях. Если вы заинтересованы в более интерактивном практическом опыте в лаборатории, обратите внимание на курс AZ-900T00&#58; Microsoft Azure Fundamentals (2 дня), который включает в себя практические занятия под руководством инструктора. Содержание обоих курсов соответствует предметной области экзамена AZ-900.
 
   #### Профиль аудитории
   Этот курс подходит для руководителей программ и технических специалистов с общим опытом работы в сфере IT. Эти слушатели хотят узнать о наших предложениях, увидеть, как внедряются компоненты, и задать вопросы о продуктах и ​​функциях. Этот курс не является пропуском Azure и не обеспечивает время в классе, чтобы слушатели могли выполнять какие-либо практические действия. Студенты могут получить бесплатную пробную версию и следовать пошаговому руководству за пределами класса. Этот курс в основном включает лекцию и демонстрации. Этот курс поможет подготовить слушателей к экзамену AZ-900.
 prerequisitesSection: |-
-  Для прохождения этого курса нет предварительных требований. Технический опыт в области ИТ не требуется, но некоторые общие знания и опыт в области ИТ будет полезен.
+  Для прохождения этого курса нет предварительных требований. Однако чем большими техническими знаниями обладает учащийся, тем больше он поймет о cloud.
 outlineSection: |-
-  ### Модуль 1&#58; Облачные принципы
-  В этом модуле вы изучите основные концепции облачных вычислений.
+  ### Модуль 1&#58; описание основных понятий Azure
+  В этом модуле вас ждет общий обзор платформы Azure и ее возможностей, ознакомившись с которым вы получите надежный фундамент для прохождения доступных модулей по Azure Fundamentals.
   #### Уроки
-  - Цели обучения
-  - Зачем нужны облачные сервисы?
-  - инфраструктурой как услуги (IaaS), платформой как услуги (PaaS) и программным обеспечением как услуги (SaaS)
-  - Публичные, частные и гибридные облачные модели
+  - Знакомство с основами Azure.
+  - Обсуждение фундаментальных понятий Azure.
+  - Описание основных архитектурных компонентов Azure.
 
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Понимание общих концепций облачных вычислений
+  После прохождения этого модуля учащиеся будут/смогут&#58;
+  - Понимать преимущества вычислений cloud в Azure и того, как они могут экономить время и деньги.
+  - Объяснять понятия вроде высокой доступности, масштабируемости, эластичности, оперативности и аварийного восстановления.
+  - Описывать основные архитектурные компоненты Azure, такие как подписки, группы управления и ресурсы.
+  - Кратко формулировать понятия географического распределения, такие как регионы, пары регионов и зоны доступности Azure.
 
 
-  ### Модуль 2&#58; Основные службы Azure
-  В этом модуле вы познакомитесь с основными службами, доступными в Microsoft Azure.
+  ### Модуль 2&#58; описание основных служб Azure
+  В этом модуле вы узнаете об основных службах Azure, таких как база данных Azure, вычисления Azure, хранилище Azure и сеть Azure.
   #### Уроки
-  - Основные архитектурные компоненты Azure
-  - Основные службы и продукты Azure
-  - Решения Azure
-  - Инструменты управления Azure
+  - Обзор базы данных и служб аналитики Azure.
+  - Обзор служб вычислений Azure.
+  - Обзор служб хранения Azure.
+  - Обзор сетевых служб Azure.
 
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Понимание основных доступных служб Microsoft Azure
+  После прохождения этого модуля учащиеся будут/смогут&#58;
+  - Понимать службы, доступные в Azure, включая службы вычислений, сетевые службы, службы хранения и службы баз данных.
+  - Определять службы виртуализации, такие как Azure VMs, Azure Container Instances и Azure Kubernetes.
+  - Сравнивать службы баз данных Azure, такие как Azure Cosmos DB, Azure SQL и Azure Database для MySQL.
+  - Проверять сетевые ресурсы Azure, такие как Virtual Networks, VPN Gateways и Azure ExpressRoute.
+  - Кратко описывать службы хранения Azure, такие как хранилище Azure Blob, хранилище Azure Disk и хранилище Azure File.
 
-  ### Модуль 3&#58; Безопасность, конфиденциальность, соответствие и доверие
-  В этом модуле вы узнаете о безопасности, конфиденциальности, совместимости и доверии в Microsoft Azure.
+
+  ### Модуль 3&#58; описание основных решений и средств управления Azure
+  В этом модуле вы узнаете о машинном обучении AI, Azure DevOps, основах мониторинга, основах управления, основах бессерверных вычислений и основах IoT.
   #### Уроки
-  - Защита сетевого подключения в Azure
-  - Основные службы идентификации Azure
-  - Инструменты и функции безопасности
-  - Методологии управления Azure
-  - Мониторинг и отчетность в Azure
-  - Стандарты конфиденциальности, соответствия и защиты данных в Azure
+  - Выбор лучшей службы AI для ваших нужд.
+  - Выбор лучших инструментов для помощи организациям с созданием лучших решений.
+  - Выбор лучшей службы мониторинга для видимости, анализа и устранения сбоев.
+  - Выбор лучших средств для управления вашей средой Azure и ее настройки.
+  - Выбор лучшей бессерверной технологии Azure для вашего бизнес-сценария.
+  - Выбор лучшей службы Azure IoT для вашего приложения.
 
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Понимание следующего&#58;
-  безопасность, конфиденциальность, согласие и доверие с Microsoft Azure
+  После прохождения этого модуля учащиеся будут/смогут&#58;
+  - Выбирать правильную службу Azure AI для решения различных видов бизнес-задач.
+  - Выбирать лучшие инструменты для процесса разработки программного обеспечения и службы для определенного бизнес-сценария.
+  - Выбирать правильную службу мониторинга cloud для решения различных видов бизнес-задач.
+  - Выбирать правильное средство управления Azure для удовлетворения различных технических потребностей.
+  - Выбирать правильную технологию бессерверных вычислений для вашего бизнес-сценария.
+  - Выбирать лучшую службу Azure IoT для определенного бизнес-сценария.
 
-  ### Модуль 4&#58; Ценообразование, соглашения об уровне обслуживания (SLA) и жизненный цикл служб в Azure
-  В этом модуле вы сосредоточитесь на моделях ценообразования и поддержки, доступные в Microsoft.
+
+  ### Модуль 4&#58; описание функций общей безопасности и функций безопасности сети
+  В этом модуле вы узнаете, как защитить себя от угроз безопасности и обеспечить безопасность ваших сетей с помощью Azure.
   #### Уроки
-  - Подписки Azure
-  - Планирование и управление расходами
-  - Жизненный цикл службы в Azure
+  - Защита от угроз безопасности в Azure.
+  - Обеспечение безопасности сетевых соединений в Azure.
 
-  После завершения этого модуля студенты смогут следующее&#58;
-  - Понимание ценообразования и моделей жизненного цикла служб, доступных с Microsoft
+  После прохождения этого модуля учащиеся будут/смогут&#58;
+  - Повышать уровень безопасности и защищаться от угроз посредством использования Azure Security Center.
+  - Собирать данные безопасности и работать с данными безопасности из различных источников посредством использования Azure Sentinel.
+  - Управлять выделенными физическими серверами для размещения Azure VMs для Windows и Linux.
+  - Определять уровни, которые составляют стратегию *углубленной защиты*.
+  - Объяснять, как Azure Firewall позволяет контролировать, какой трафик разрешен для сети.
+  - Настраивать группы безопасности сети для фильтрации сетевого трафика, поступающего на ресурсы Azure и исходящего из них.
+  - Объяснять, как Azure DDoS Protection помогает защищать ресурсы Azure от атак DDoS.
 
+
+  ### Модуль 5&#58; описание функций удостоверения, управления, конфиденциальности и соответствия
+  В этом модуле вы узнаете о службах удостоверения Azure; о том, как составить стратегию управления cloud; о стандартах конфиденциальности, соответствия и защиты данных в Azure.
+  #### Уроки
+  - Защита доступа к вашим приложениям с помощью использования служб удостоверения Azure.
+  - Разработка стратегии управления cloud в Azure.
+  - Обзор стандартов конфиденциальности, соответствия и защиты данных в Azure.
+
+  После прохождения этого модуля учащиеся будут/смогут&#58;
+  - Объяснять разницу между аутентификацией и авторизацией.
+  - Описывать, как Azure Active Directory обеспечивает управление удостоверениями и доступом.
+  - Объяснять роль, которую играет единый вход (SSO), многофакторная проверка подлинности и Conditional Access.
+  - Принимать организационные решения в отношении среды cloud с помощью использования CAF для Azure.
+  - Определять, кто может осуществлять доступ к решениям cloud, с помощью использования управления доступом на основе ролей Azure.
+  - Применять блокировку ресурса для предотвращения случайного удаления ресурсов Azure.
+  - Применять теги к ресурсам Azure, чтобы помогать описывать их цель.
+  - Контролировать то, как создаются ресурсы, и поводить аудит создания ресурсов с помощью использования политики Azure.
+  - Обеспечивать управление в масштабе для различных подписок Azure с помощью использования Azure Blueprints.
+  - Объяснять доступные в Azure типы предложений по обеспечению соответствия.
+  - Получить представление о нормативных стандартах и соблюдении регулятивных норм в Azure.
+  - Объяснять возможности Azure для государственных учреждений.
+
+
+  ### Модуль 6&#58; описание управления затратами и соглашений об уровне обслуживания Azure
+  В этом модуле вы узнаете, как планировать затраты на Azure и управлять ими, как выбирать правильные службы Azure с учетом SLAs и жизненного цикла службы.
+  #### Уроки
+  - Планирование затрат на Azure и управление ими.
+  - Выбор правильных служб Azure посредством изучения SLAs и жизненного цикла службы.
+
+  После прохождения этого модуля учащиеся будут/смогут&#58;
+  - Пользоваться калькулятором совокупной стоимости владения.
+  - Описывать различные способы покупки продуктов и служб Azure.
+  - Использовать калькулятор цен для оценки ежемесячных затрат на выполнение рабочих нагрузок cloud.
+  - Определение основных факторов, влияющих на общую стоимость и применять рекомендуемые практики для минимизации затрат.
+  - Описывать, что такое service-level agreement (SLA) и почему SLAs важны.
+  - Определять факторы, которые могут влиять на SLA, например, выбираемый уровень служб.
+  - Объединять SLAs для вычисления составного SLA.
+  - Описывать жизненный цикл службы в Azure.
