--- a/learn-certs-pr/courses/mb-330t00.yml
+++ b/learn-certs-pr/courses/mb-330t00.yml
@@ -31,7 +31,24 @@ summary: |-
   Этот курс разработан для консультантов по функциональным возможностям Dynamics 365 Supply Chain Management. Консультант по функциональным возможностям Dynamics 365 Supply Chain Management — основной ресурс, осуществляющий проектирование и настройку приложений для выполнения требований клиента. Консультант по функциональным возможностям анализирует бизнес-требования и создает на основе этих требований полностью осуществляемые бизнес-процессы и решения на основе рекомендуемых в области практик. Консультант по функциональным возможностям специализируется на одном или нескольких наборах функций Dynamics&#58; финансах, производстве или управлении логистическими цепочками. Консультанты по функциональным возможностям работают вместе с архитекторами, разработчиками, администраторами и другими заинтересованными лицами для предоставления решений, которые соответствуют требованиям клиентов или превосходят их.
 outlineSection: |-
   ### Модуль 1&#58; реализация управления информацией о продукте
-  В этом модуле вы познакомитесь со следующими темами&#58; создание и выпуск продуктов и вариантов продуктов; создание и применение шаблонов продуктов; создание спецификаций (BOM); определение цели и возможностей моделей конфигурации продуктов; настройка учета в двух единицах измерения; настройка продуктов прямой поставки; создание складской аналитики и управление ею; настройка номенклатурных групп; создание и присвоение штрих-кодов и глобальных торговых идентификационных номеров (GTIN); настройка иерархий категорий и атрибутов продуктов; настройка конверсии единиц продукции; настройка параметров заказа по умолчанию; описание методов оценки стоимости запасов и групп моделей; настройка версий учета затрат для стандартных и запланированных затрат; настройка цен покупок по умолчанию, цен продаж по умолчанию и коммерческих соглашений.
+  В этом модуле вы познакомитесь со следующими темами&#58; 
+  
+  Создание и отпуск продуктов и вариантов продуктов.  
+  Создание и применение шаблонов продуктов.  
+  Создание спецификаций (BOMs).  
+  Определение цели и возможностей моделей конфигураций продуктов.  
+  Настройка учета в двух единицах измерения.  
+  Настройка продуктов прямой поставки.  
+  Создание складской аналитики и управление ею.  
+  Настройка номенклатурных групп.  
+  Создание и присвоение штрих-кодов и номеров Global Trade Identification Number (GTIN).  
+  Настройка иерархий категорий и атрибутов продуктов.  
+  Настройка конверсии единиц продукции.  
+  Настройка параметров заказа по умолчанию.  
+  Описание методов оценки стоимости запасов и групп моделей.  
+  Настройка версий учета затрат для стандартных и запланированных затрат.  
+  Настройка цен покупок по умолчанию, цен продаж по умолчанию и коммерческих соглашений. 
+
   #### Уроки
   - Создание продуктов и управление ими.
   - Настройка продуктов для управления логистическими цепочками.
@@ -42,7 +59,16 @@ outlineSection: |-
 
 
   ### Модуль 2&#58; реализация управления запасами
-  Этот модуль познакомит вас со следующими областями&#58; настройка журналов и параметров управления запасами; настройка структуры разделения запасов; настройка ABC-классификаций; настройка отчетов по оценке запасов; создание и обработка журналов, включая журналы спецификаций, прибытия номенклатуры, передачи, перемещения, корректировки запасов, подсчета и учета маркеров; создание и обработка заказов на перемещение; реализация закрытия склада и корректировки запасов.
+  Этот модуль познакомит вас со следующими областями&#58; 
+  
+  Настройка журналов и параметров управления запасами.  
+  Настройка структуры разделения запасов.  
+  Настройка ABC-классификаций.  
+  Настройка отчетов по оценке запасов.  
+  Создание и обработка журналов, включая журналы спецификаций, прибытия номенклатуры, передачи, перемещения, корректировки запасов, подсчета и учета маркеров.  
+  Создание и обработка заказов на перемещение.  
+  Реализация закрытий складов и корректировок запасов.
+
   #### Уроки
   - Настройка управления запасами.
   - Управление складскими операциями и их обработка.
@@ -62,7 +88,24 @@ outlineSection: |-
 
 
   ### Модуль 3&#58; реализация процессов логистических цепочек и управление ими
-  Этот модуль познакомит вас со следующими темами&#58; создание заявок на закупку, запросов предложений (RFQ) и заказов на покупку (PO) и управление ими; настройка процессов управления изменениями; настройка и применение ретробонусов поставщиков; знакомство с совместной работой с поставщиками; управление консигнационными запасами; управление перепоставками и недопоставками; настройка категорий закупаемой продукции и политик закупок; настройка расходов; настройка предложений, заказов на продажу и заказов на возврат; настройка групп продаж и комиссий; настройка поиска клиентов, продуктов и перспективных клиентов; настройка и обработка документов по межфирменным торговым отношениям; знакомство с руководствами по D365; разработка руководств по D365; использование руководств по D365.
+  Этот модуль познакомит вас со следующими темами&#58; 
+  
+  Создание заявок на закупку, запросов предложений (RFQs) и заказов на покупку (POs) и управление ими.  
+  Настройка процессов управления изменениями.  
+  Настройка и применение ретробонусов поставщиков.  
+  Знакомство с совместной работой с поставщиками.  
+  Управление консигнационными запасами.  
+  Управление перепоставками и недопоставками.  
+  Настройка категорий закупаемой продукции и политик закупок.  
+  Настройка расходов.  
+  Настройка предложений, заказов на продажу и заказов на возврат.  
+  Настройка групп продаж и комиссий.  
+  Настройка поиска клиентов, продуктов и перспективных клиентов.  
+  Настройка и обработка документов по межфирменным торговым отношениям.  
+  Знакомство с D365 Guides. 
+  Разработка D365 Guides.
+  Использование D365 Guides. 
+
   #### Уроки
   - Реализация закупок и источников.
   - Реализация стандартных функций продаж и маркетинга.
@@ -90,7 +133,27 @@ outlineSection: |-
 
 
   ### Модуль 4&#58; реализация управления складом и управления транспортировкой
-  Этот модуль познакомит вас со следующими темами&#58; создание сайтов, складов, местонахождений, форматов местонахождений, профилей местонахождений, типов местонахождений и зон; реализация директив для местонахождения; настройка статусов запасов, групп упорядочения единиц и иерархий резервирования; реализация волны и работы, шаблонов; реализация шаблона формирования загрузок волны; настройка меню мобильного устройства, пунктов меню и параметров отображения; управление процессами движения запасов; реализация подсчета циклов; обработка входящих и исходящих заказов; обработка отгрузок; описание процесса пополнения; знакомство с кросс-докингом; настройка перевозчиков и групп перевозчиков; реализация планирования и выполнения загрузок и отгрузок; настройка и генерация векселей фрахта и счетов; настройка планов маршрутов и руководств; настройка маршрутов и механизмов ставок; настройка и использование планирования встречи для дебаркадера.
+  Этот модуль познакомит вас со следующими темами&#58; 
+  
+  Создание мест, складов, местонахождений, форматов местонахождений, профилей местонахождений, типов местонахождений и зон.  
+  Реализация директив для местонахождения.  
+  Настройка статусов запасов, групп упорядочения единиц и иерархий резервирования.  
+  Реализация волны и работы, шаблонов.  
+  Реализация шаблона формирования загрузок волны.  
+  Настройка меню, пунктов меню и параметров отображения для мобильного устройства.  
+  Управление процессами движения запасов.  
+  Реализация подсчета циклов.  
+  Обработка входящих и исходящих заказов.  
+  Обработка отгрузок.  
+  Описание процесса пополнения, кросс-докинга.  
+  Введение.  
+  Настройка перевозчиков и групп перевозчиков.  
+  Реализация планирования и выполнения загрузок и отгрузок.  
+  Настройка и генерация векселей фрахта и счетов.  
+  Настройка планов маршрутов и руководств.  
+  Настройка маршрутов и механизмов ставок.  
+  Настройка и использование планирования встречи для дебаркадера.  
+
   #### Уроки
   - Настройка управления складом.
   - Реализация процессов управления складом.
@@ -123,7 +186,13 @@ outlineSection: |-
 
 
   ### Модуль 5&#58; настройка контроля качества и управления качеством и управление ими
-  Этот модуль познакомит вас со следующими темами&#58; настройка контроля качества; настройка управления качеством; управление заказами контроля качества и карантинными заказами; управление блокировкой запасов.
+  Этот модуль познакомит вас со следующими темами&#58; 
+  
+  Настройка контроля качества.  
+  Настройка управления качеством.  
+  Управление заказами контроля качества и карантинными заказами.  
+  Управление блокировкой запасов.
+
   #### Уроки
   - Настройка контроля качества и управление качеством.
   - Управление контролем качества и управлением качеством.
@@ -140,7 +209,19 @@ outlineSection: |-
   
   
   ### Модуль 6&#58; реализация сводного планирования
-  Этот модуль познакомит вас со следующими темами&#58; различия между оптимизацией планирования и сводным планированием; настройка групп покрытия и покрытия номенклатуры; настройка параметров сводного планирования, сводного плана, прогнозных планов и непрерывных планов; различия между сообщениями по действиям, сообщениями по задержкам, временными границами и отрицательными днями; обработка и просмотр спланированных заказов; настройка и использование формы графика поставок; настройка и обработка журналов резервных запасов; настройка и реализация межфирменного сводного планирования; реализация прогнозирования на основе спроса; внедрение оптимизации планирования.
+  Этот модуль познакомит вас со следующими темами&#58; 
+  
+  Различия между оптимизацией планирования и сводным планированием.  
+  Настройка групп покрытия и покрытия номенклатуры.  
+  Настройка параметров сводного планирования, сводного плана, прогнозных планов и непрерывных планов.  
+  Различия между сообщениями по действиям, сообщениями по задержкам, временными границами и отрицательными днями.  
+  Обработка и просмотр спланированных заказов.  
+  Настройка и использование формы Supply Schedule.  
+  Настройка и обработка журналов резервных запасов.  
+  Настройка и реализация межфирменного сводного планирования.  
+  Реализация прогнозирования на основе спроса.  
+  Внедрение оптимизации планирования.  
+
   #### Уроки
   - Настройка сводного планирования и прогнозирования.
   - Запуск сводных планов и управление спланированными заказами.
