--- a/learn-certs-pr/exams/az-204.yml
+++ b/learn-certs-pr/exams/az-204.yml
@@ -18,6 +18,8 @@ summary: |-
   Для реализации решений разработчики Azure сотрудничают с архитекторами облачных решений, облачными администраторами баз данных, облачными администраторами и непосредственно с клиентами.
 
   Кандидат на этот экзамен должен иметь 1-2-летний опыт профессионального развития и опыт работы с Microsoft Azure. Кроме того, эта роль подразумевает умение программировать на языке, поддерживаемом Azure, и знание Azure SDK, Azure PowerShell, Azure CLI, параметров хранения данных, подключений к данным, API, аутентификации и авторизации приложений, развертывания вычислений и контейнеров, отладки, настройки производительности и мониторинга.
+
+  У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [«Кредиты колледжа от ACE за сертификационные экзамены»](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: разработка Azure вычислительных служб; разработка для службы хранилища Azure; внедрение безопасности Azure; мониторинг, устранение неполадок и оптимизация решений; а также подключение и использование служб Azure и сторонних служб.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oZ7B
