--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -17,6 +17,8 @@ summary: |-
   Кандидаты несут основную ответственность за настройку системы в соответствии с потребностями клиентов, выполнение задач проектирования, связанных с внедрением новых функций и возможностей, а также внедрение и тестирование изменений системы.
 
   Кандидаты планируют функциональный дизайн решений, реализуют процесс управления жизненным циклом приложений (ALM), переносят данные и объекты из устаревших и внешних систем, интегрируют Power Platform с другими системами и управляют средой Power Platform.
+
+  <div><strong><br/>В связи с отменой этого экзамена 31 декабря 2020 года Microsoft не будет менять упоминания Common Data Service на Microsoft Dataverse.</strong></div>
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: выполнение обнаружения, планирования и анализа; управление дизайном пользовательского интерфейса; управление объектами и данными; обеспечение безопасности; реализация интеграции, а также выполнение развертывания и тестирования решений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxb
