--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -8,7 +8,7 @@ displayName: MB-220
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 10 ноября 2020 года. Пожалуйста, загрузите документ оцениваемых навыков ниже, чтобы узнать об изменениях.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 10 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
   Кандидаты на этот экзамен являются консультантами по функциональным возможностям Dynamics 365 Marketing. Кандидаты отвечают за реализацию решений, которые привлекают и конвертируют лидов, повышают уровень узнаваемости бренда, стандартизируют ведение коммуникации по различным каналам и предоставляют маркетинговую информацию.
@@ -26,7 +26,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 10 ноября 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
+- Содержание этого экзамена было обновлено 10 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Настройка маркетинговых приложений (20-25%)
 - Управление сегментами и списками (5-10%)
 - Создание и управление маркетинговыми формами и страницами (10-15%)
