--- a/learn-certs-pr/exams/mb-400.yml
+++ b/learn-certs-pr/exams/mb-400.yml
@@ -16,6 +16,8 @@ summary: |-
   Кандидаты должны обладать глубокими прикладными знаниями о приложениях Power Apps, управляемых моделями в Dynamics 365, включая глубокое понимание настройки, конфигурации, интеграции и расширяемости, а также границ и ограничений. Кандидаты должны иметь общее представление о методах DevOps для приложений на основе моделей Power Apps в Dynamics 365. Кандидаты должны уметь раскрывать, хранить и сообщать о данных.
 
   Кандидаты должны иметь опыт разработки, который включает JavaScript, TypeScript, C#, HTML, .NET, Microsoft Azure, Office 365, веб-службы RESTful, ASP.NET и Power BI.
+
+  <div><strong><br/>В связи с отменой этого экзамена 31 декабря 2020 года Microsoft не будет менять упоминания Common Data Service на Microsoft Dataverse.</strong></div>
 subTitle: 'Этот позволяет оценить вашу способность выполнять следующие технические задачи: создание технических проектов; настройка общих служб данных (CDS); создание и настройка Power Apps; настройка автоматизации бизнес-процессов; улучшение опыта работы пользователей; расширение платформы; и развитие интеграций.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42uM0
