--- a/learn-certs-pr/exams/ms-203.yml
+++ b/learn-certs-pr/exams/ms-203.yml
@@ -8,7 +8,7 @@ displayName: MS-203
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
   Кандидатами на этот экзамен являются Администраторы обмена сообщениями, которые развертывают, настраивают, управляют и отслеживают получателей, разрешения, защиту почты, поток почты и общие папки в гибридных и облачных корпоративных средах, а также устраняют связанные со всем этим неполадки.
@@ -28,7 +28,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Управление организационными настройками и ресурсами (30-35%)
 - Планирование и управление почтовой архитектурой (20-25%)
 - Планирование и внедрение гибридной конфигурации и миграции (20-25%)
@@ -39,6 +39,10 @@ products:
 - m365
 courses:
 - uid: course.ms-203t00
+paths:
+- uid: learn-m365.m365-messaging-hybrid-migration
+- uid: learn-m365.m365-messaging-architecture
+- uid: learn-m365.m365-messaging-secure-environment
 relatedCertifications:
 - related:
     uid: certification.m365-messaging-administrator
