--- a/learn-certs-pr/exams/ms-900.yml
+++ b/learn-certs-pr/exams/ms-900.yml
@@ -16,6 +16,8 @@ summary: |-
   Кандидаты должны обладать необходимыми знаниями, чтобы рекомендовать решения, которые помогут урегулировать общие организационные ИТ-проблемы, а также должны уметь отличать решения Microsoft 365 от конкурентов на рынке. Кандидаты также должны обладать фундаментальными знаниями о предложениях, оптимизации лицензирования для обеспечения экономической эффективности и вариантах поддержки организаций.
 
   Кандидаты должны уметь различать службы и продукты Microsoft (Microsoft 365, Azure и Dynamics 365).
+
+  У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [«Кредиты колледжа от ACE за сертификационные экзамены»](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
 subTitle: Докажите, что вы понимаете облачные концепты; основные сервисы и концепты Microsoft 365; концепты безопасности, соответствия требованиям, конфиденциальности и доверия в Microsoft 365, а также ценообразование и поддержку Microsoft 365.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVw
