--- a/learn-certs-pr/azure-database-administrator-associate.yml
+++ b/learn-certs-pr/azure-database-administrator-associate.yml
@@ -9,6 +9,10 @@ summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
   Azure Database Administrator реализует и управляет функциональными аспектами облачных и гибридных решений платформы данных, созданных с помощью служб данных Azure и SQL Server. Azure Database Administrator должен уметь использовать различные методы и инструменты для выполнения повседневных операций, включая применение знаний об использовании T-SQL для административного управления.
+
+  <div></br>
+  Кандидаты на эту роль должны понимать все понятия, описанные в <a href='/learn/certifications/exams/dp-900'>Exam DP-900: Microsoft Azure Data Fundamentals</a>.
+  </div>
 subTitle: Azure Database Administrator внедряет и управляет функциональными аспектами облачных и гибридных решений на платформе данных, созданными на основе служб данных Microsoft Azure и Microsoft SQL Server.
 levels:
 - intermediate
