--- a/learn-certs-pr/courses/mb-210t01.yml
+++ b/learn-certs-pr/courses/mb-210t01.yml
@@ -5,7 +5,7 @@ metadata:
   description: 'Course MB-210T01: Microsoft Dynamics 365 Sales'
 uid: course.mb-210t01
 courseNumber: 'MB-210T01'
-hoursToComplete: 24
+hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Установка и настройка приложения
@@ -27,67 +27,59 @@ products:
 exams:
 - uid: exam.mb-210
 summary: |-
-  Microsoft Dynamics 365 для продаж - это комплексное приложение для управления работой с клиентами и потенциальными клиентами. Оно помогает отслеживать данные и сравнивать их с целями продаж, автоматизировать лучшие практики, извлекать уроки из данных и многое другое.
+  Microsoft Dynamics 365 Sales — это сквозное приложение для управления взаимоотношениями с клиентами и потенциальными клиентами. Использование Dynamics 365 Sales позволяет организациям сопоставлять данные с планами продаж, автоматизировать лучшие практики, получать важную информацию на основе данных и много чего еще.
 
-  Наша команда всемирно признанных экспертов шаг за шагом ведет студентов от лида к возможности и закрытой сделке. Используя имеющиеся в приложении опции автоматизации и настройки, студенты узнают, как сделать так, чтобы сотрудники отдела продаж работали наиболее эффективно.
+  Присоединяйтесь к нашей команде всемирно признанных экспертов, которые пошагово покажут вам, как переходить от лида к возможности и закрытой сделке. Вы узнаете, как сделать так, чтобы торговый персонал работал наиболее продуктивно благодаря использованию возможностей автоматизации и настройки приложения.
 
   #### Профиль аудитории
-  Функциональный консультант по взаимодействию с клиентами Dynamics 365 отвечает за обнаружение, сбор требований, привлечение экспертов и заинтересованных сторон, перевод требований и настройку решения и приложений. Функциональный консультант реализует решение, используя готовые возможности, расширяемость без кода, приложения и интеграцию услуг.
+  Dynamics 365 Functional Consultant отвечает за выявление и сбор требований, привлечение профильных специалистов и заинтересованных лиц, интерпретацию требований и настройку решения и приложений. Консультант по функциональным возможностям реализовывает решение с использованием стандартных возможностей, расширяемости без программирования, интеграций приложений и служб.
 prerequisitesSection: |-
-  Знакомство с бизнес-приложениями и желание настроить и внедрить их для бизнеса.
+  Знание бизнес-приложений и желание настраивать и внедрять их для вашего бизнеса.
 outlineSection: |-
-  ### Модуль 1&#58; Обзор продаж
-  В этом модуле студенты изучат основы продаж в Dynamics 365. Они будут устанавливать и настраивать приложение, а также узнавать о ролях безопасности, ключевых терминах и модели данных.
+  ### Модуль 1&#58; настройка Dynamics 365 Sales
+  В этом модуле вы узнаете о настройке приложения продаж для уникальных требований организации.
   #### Уроки
-  - Обзор продаж
-  - Настройка продаж
-  - Краткое содержание модуля
+  - Настройка параметров организации и управления.
+  - Создание и настройка визуализаций продаж.
 
-  После завершения этого модуля студенты получат следующее&#58;
-  - Устанавливать и настраивать приложение для продаж
-  - Определять общие сценарии продаж
+  После прохождения этого модуля вы сможете&#58; 
+  - Устанавливать и настраивать приложение продаж.
+  - Определять типовые сценарии продаж.
 
 
-  ### Модуль 2&#58; Работа с возможностями
-  В этом модуле студенты узнают, как управлять записями данных о клиентах, использовать встроенные инструменты продаж и вести лида к возможности.
+  ### Модуль 2&#58; управление клиентами, лидами и возможностями
+  В этом модуле вы узнаете, как управлять записями данных клиентов, использовать встроенные инструменты продаж и проводить лида через жизненный цикл лида.
   #### Уроки
-  - Управление клиентами
-  - Работа с возможностями
-  - Встроенный интеллект
-  - Книги Playbooks
-  - Интегрированные инструменты продаж
-  - Краткое содержание модуля
+  - Управление клиентами с использованием учетных записей и контактов.
+  - Управление лидами.
+  - Управление возможностями.
 
-  После завершения этого модуля студенты получат следующее&#58;
-  - Создавать записи клиентов
-  - Использовать инструменты продаж
+  После прохождения этого модуля вы сможете&#58;
+  - Создавать записи клиентов.
+  - Использовать инструментарий продаж. 
+  - Создавать лиды и возможности. 
 
 
-  ### Модуль 3&#58; Расценки на заказы
-  В этом модуле студенты узнают, как использовать расценки и предложения для дальнейшего использования Dynamics 365 for Sales для управления возможностями продаж для закрытых сделок.
+  ### Модуль 3&#58; обработка заказов на продажу
+  В этом модуле мы узнаем, как использовать предложения и заказы для дальнейшего использования Dynamics 365 Sales для управления вашими возможностями продаж и превращения их в закрытые сделки.
   #### Уроки
-  - Обзор обработки заказов
-  - Управление каталогом товаров
-  - Создание и управление цитатами
-  - Создание и управление заказами и счетами
-  - Краткое содержание модуля
+  - Управление предложениями, заказами и счетами.
+  - Управление каталогом продукции и его организация.
+  - Управление прогнозированием.
+  - Настройка сборников схем.
 
-  После завершения этого модуля студенты получат следующее&#58;
-  - Создать и использовать каталог продукции
-  - Добавлять цитаты к возможностям
-  - Завершить процесс продажи сделкой
+  После прохождения этого модуля вы сможете&#58;
+  - Создавать и использовать каталог продукции.
+  - Добавлять предложения к возможностям.
+  - Завершать продажу заказом.
 
 
-  ### Модуль 4&#58; Аналитика и идеи продаж 
-  В этом модуле студенты узнают, как создавать и использовать цели, интегрироваться с PowerBI и включать Sales AI.
+  ### Модуль 4&#58; интеграция компонентов с Dynamics 365 Sales
+  В этом модуле мы узнаем, как использовать инструменты аналитики продаж для предоставления новых возможностей команде продавцов.
   #### Уроки
-  - Обзор
-  - Power BI
-  - Искусственный интеллект для продаж
-  - Сводка модулей
+  - Использование Embedded Intelligence в Dynamics 365 Sales.
+  - Управление взаимоотношениями с помощью социальных продаж.
 
-  После завершения этого модуля студенты получат следующее&#58;
-  - Создавать и использовать цели
-  - Интегрировать с PowerBI
-  - Включать функции продаж искусственного интеллекта
-
+  После прохождения этого модуля вы сможете&#58; 
+  - Использовать инструменты Embedded Intelligence.
+  - Управлять взаимоотношениями с использованием инструментов социальных продаж.
