--- a/learn-certs-pr/courses/mb-220t00.yml
+++ b/learn-certs-pr/courses/mb-220t00.yml
@@ -32,126 +32,106 @@ summary: |-
   В этом курсе мы рассмоторим конфигурацию маркетингового приложения, необходимую для развития бизнеса. Также будут изучены: управление лидами, маркетинговые формы и страницы, сегментация и почтовые маркетинговые сообщения. Все эти элементы связаны друг с другом благодаря интерактивному циклу взаимодействия с клиентом, который включает настройку событий и опросов.
 
   #### Профиль аудитории
-  Этот курс предназначен для ИТ-специалистов или специалистов по маркетингу, которые хотят научиться использовать Dynamics 365 for Marketing для бизнеса.
+  Этот курс разработан для специалистов в области IT и маркетинга, желающих узнать, как использовать Dynamics 365 Marketing для бизнеса.
 prerequisitesSection: |-
   Знание платформы Dynamics 365 и понимание основных принципов маркетинга.
 outlineSection: |-
-  ### Модуль 1&#58; Конфигурация маркетингового приложения
-  В этом модуле вы узнаете о дополнительных настройках, маркетинговом контенте, шаблонах и интеграциях в Dynamics 365 for Marketing.
+  ### Модуль 1&#58; настройка Dynamics 365 Marketing
+  В этом модуле вы узнаете о дополнительных параметрах, маркетинговом контенте, шаблонах и интеграциях в Dynamics 365 for Marketing.
   #### Уроки
-  - Конфигурация дополнительных параметров
-  - Управление маркетинговым контентом и шаблонами
-  - Управление интеграциями в LinkedIn и Power BI.
+  - Настройка параметров организации и управления.
+  - Настройка маркетинговых параметров.
+  - Настройка параметров событий.
 
-  После завершения этого модуля вы будете&#58;
-  - Настройка дополнительных параметров, таких как организация, управление бизнесом и контента.
-  - Управление маркетинговым контентом и шаблонами.
+  После прохождения этого модуля вы сможете&#58;
+  - Настраивать дополнительные параметры, такие как организация, управление бизнесом и контент.
+  - Управлять маркетинговым контентом и шаблонами.
 
 
-  ### Модуль 2&#58; Лиды
-  Этот модуль расскажет, как создавать, управлять и оценивать потенциальных клиентов.
+  ### Модуль 2&#58; управление сегментами и списками
+  В этом модуле рассматривается, как создавать и использовать сегменты и центры подписок, а также как ими управлять.
   #### Уроки
-  - Создавать лидов и управлять ими
-  - Оценка готовности продаж
+  - Создание сегментов и управление ими.
+  - Создание центров подписок и списков и управление ими.
 
-  После завершения этого модуля вы будете&#58;
-  - Создавать лидов и управлять ими.
-  - Синхронизировать лидов из LinkedIn.
-  - Оценивать готовность к продажам с использованием моделей оценки потенциальных клиентов.
+  После прохождения этого модуля вы сможете&#58;
+  - Создавать сегменты и управлять ими.
+  - Создавать центры подписок и управлять ими.
 
 
-  ### Модуль 3&#58; Маркетинговые формы и страницы
-  Этот модуль расскажет, как создавать маркетинговые формы и страницы.
+  ### Модуль 3&#58; управление маркетинговыми формами и страницами
+  В этом модуле рассказывается, как создавать маркетинговые формы и страницы.
   #### Уроки
-  - Создание маркетинговых форм
-  - Создание маркетинговых страниц
-  - Управление интернет-маркетингом
+  - Управление формами.
+  - Управление маркетинговыми страницами.
 
-  После завершения этого модуля вы будете&#58;
-  - Создавать маркетинговые формы и вставлять их на маркетинговые страницы
+  После прохождения этого модуля вы сможете&#58;
+  - Создавать маркетинговые формы и внедрять их на маркетинговые страницы.
   - Создавать маркетинговые страницы.
-  - Предварительно просматривать, проверять и запускать маркетинговые страницы.
-  - Создавать шаблоны маркетинговых форм и страниц.
+  - Создавать предварительную версию маркетинговой страницы, оценивать и запускать ее.
+  - Создавать маркетинговые формы и шаблоны страниц.
 
 
-  ### Модуль 4&#58; Сегменты и списки
-  В этом модуле рассказывается, как управлять сегментами, центрами подписки, списками и двойным согласием.
+  ### Модуль 4&#58; управление лидами, учетными записями и контактами
+  В этом модуле рассматривается, как управлять клиентами в качестве учетных записей или контактов и как проводить их через жизненный цикл лида.
   #### Уроки
-  - Создание и управление сегментами
-  - Создание и управление центрами подписки
-  - Двойной выбор
+  - Создание лидов и управление ими.
+  - Управление учетными записями и контактами.
 
-  После завершения этого модуля вы будете&#58;
-  - Настроить статические и динамические сегменты.
-  - Создать список подписки.
-  - Настроить страницу центра подписки.
-  - Установить и включить процесс двойного согласия.
+  После прохождения этого модуля вы сможете&#58;
+  - Отслеживать клиентов в качестве учетных записей или контактов.
+  - Создавать лиды и конвертировать их в возможности.
+  - Проводить лиды через жизненный цикл лида.
 
 
-  ### Модуль 5&#58; Маркетинговые письма
-  Этот модуль расскажет, как создавать сообщения электронной почты в Dynamics 365 Marketing.
+  ### Модуль 5&#58; управление маркетинговыми электронными письмами и циклами взаимодействия с клиентами
+  В этом модуле рассказывается, как создавать сообщения электронной почты и циклы взаимодействия с клиентами в Dynamics 365 Marketing.
   #### Уроки
-  - Создание сообщений электронной почты
+  - Создание маркетинговых электронных писем.
+  - Создание циклов взаимодействия с клиентами.
 
-  После завершения этого модуля вы будете&#58;
-  - Создавать и оформлять сообщения электронной почты.
-  -  Предварительно просматривать, проверять и отправлять сообщения электронной почты.
-  - Сохранять сообщение электронной почты в качестве шаблона.
+  После прохождения этого модуля вы сможете&#58;
+  - Создавать и оформлять сообщения электронной формы.
+  - Создавать предварительные версии сообщений электронной почты, оценивать и запускать их.
+  - Сохранять сообщения электронной почты как шаблоны.
+  - Создавать циклы взаимодействия с клиентами.
 
 
-  ### Модуль 6&#58; Прогулки клиентов
-  Этот модуль рассматривает процесс создания прогулки клиента.
+  ### Модуль 6&#58; управление событиями
+  В этом модуле рассматривается процесс создания цикла взаимодействия с клиентами.
   #### Уроки
-  - Создание прогулок клиентов
+  - Создание события на сайте.
+  - Создание вебинара.
+  - Продвижение событий и управление ими.
 
-  После завершения этого модуля вы будете&#58;
-  - Создавать прогулки клиентов по шаблону.
-  - Определять укладку и свойства прогулок клиентов.
-  - Подтверждать и запускать прогулки клиентов.
-  - Создавать прогулки клиентов на основе учетных записей.
-  - Понимать особенности календаря маркетинга.
+  После прохождения этого модуля вы сможете&#58;
+  - Создавать вебинары.
+  - Создавать события на сайте.
+  - Продвигать событие.
+  - Управлять сайтом события.
+  - Настраивать параметры событий.
 
 
-  ### Модуль 7&#58; Идеи
-  Этот модуль продемонстрирует, как просматривать, понимать и управлять мнениями клиентов.
+  ### Модуль 7&#58; создание опросов с помощью Dynamics 365 Customer Voice
+  В этом модуле рассказывается, как создавать опросы и распространять их среди клиентов.
   #### Уроки
-  - Маркетинговые идеи
-  - Мнения клиентов
-  - Понимание исполнения маркетинговых идей
-  - Идеи управления лидами
-  - Идеи интернет-маркетинга
+  - Создание опросного проекта.
+  - Создание опросов с помощью Dynamics 365 Customer Voice.
+  - Отправка опросов с помощью Dynamics 365 Customer Voice.
 
-  После завершения этого модуля вы будете&#58;
-  - Находить идеи.
-  - Понимание маркетинговых идей, таких как контакт, сегмент, цикл взаимодействия с клиентом, маркетинговая электронная почта и лиды
+  После прохождения этого модуля вы сможете&#58;
+  - Управлять опросами с использованием проектов.
+  - Создавать опросы.
+  - Персонализировать опросы.
+  - Распространять опросы среди клиентов.
 
 
-  ### Модуль 8&#58; Мероприятия
-  В этом модуле вы узнаете, как управлять планированием и выполнением событий в Dynamics 365 for Marketing.
+  ### Модуль 8&#58; анализ аналитики в Dynamics 365 Marketing
+  В этом модуле вы узнаете, как использовать функционал аналитики для просмотра и анализа данных, связанных с вашими маркетинговыми инициативами.
   #### Уроки
-  - Управление планированием мероприятий
-  - Управление ходом событий
+  - Оценка маркетинговых инициатив с помощью аналитики.
 
-  После завершения этого модуля вы будете&#58;
-  - Создавать персональные мероприятия и вебинары.
-  - Настройка функций планирования событий, таких как сессии, докладчики, пропуски событий, списки ожидания и места проведения
-  - Создавать и управлять повторяющимися событиями.
-
-
-  ### Модуль 9&#58; Опросы
-  В этом модуле вы узнаете, как настраивать, проектировать и распространять опросы в Dynamics 365 for Marketing.
-  #### Уроки
-  - Создание опросов
-
-  После завершения этого модуля вы будете&#58;
-  - Создать тему опроса с возможностью повторного использования.
-  - Создать, оформить, предварительно просмотреть и опубликовать опрос.
-
-
-  ### Модуль 10&#58; Результаты
-  В модуле «Результаты» вы ознакомитесь с маркетинговыми событиями и ознакомитесь с результатами опроса.
-  #### Уроки
-  - Обзор событий и результатов опроса
-
-  После завершения этого модуля вы будете&#58;
-  - Использование информационной панели событий для оценки результатов событий
+  После прохождения этого модуля вы сможете&#58;
+  - Использовать аналитику для принятия решений в отношении маркетинговых усилий.
+  - Оценивать лиды.
+  - Просматривать аналитику, связанную с циклами взаимодействия с клиентами.
