--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -8,7 +8,7 @@ displayName: AZ-900
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 9 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится. </strong><br/><br/></div> 
+  <div><strong>Содержание этого экзамена было обновлено 9 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось. </strong><br/><br/></div> 
   </div>
   
   Кандидаты на этот экзамен должны иметь базовые знания облачных служб и того, как эти службыы предоставляются в Microsoft Azure. Экзамен предназначен для кандидатов, которые только начинают работать с облачными решениями и сервисами или являются новичками в Azure.
@@ -16,6 +16,8 @@ summary: |-
   Экзамен по основам Azure - это возможность подтвердить знание облачных концепций, служб Azure, рабочих нагрузок Azure, безопасности и конфиденциальности в Azure, а также ценообразования и поддержки Azure. Candidates should be familiar with the general technology concepts, including concepts of networking, storage, compute, application support, and application development.
 
   Основы Azure можно использовать для подготовки к получению других ролевых или специальных сертификатов Azure, но это не является обязательным условием для любого из них.
+
+  У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [«Кредиты колледжа от ACE за сертификационные экзамены»](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
 subTitle: 'Этот экзамен позволяет оценить вашу способность понимать следующие концепции: концепции облачных вычислений, основные службы Azure, концепции облачной безопасности, конфиденциальности, соответствия требованиям и доверия, а также цены и поддержку Azure.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwUY
@@ -38,13 +40,19 @@ locales:
 levels:
 - beginner
 skills:
-- Содержание этого экзамена будет обновлено 9 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
-- Описание облачных концепций (15-20%)
-- Описание основных служб Azure (30-35%)
-- Описание безопасности, конфиденциальности, соответствия и доверия (25-30%)
-- Описание соглашения об уровне обслуживания Azure и жизненных циклов (20-25%)
+- Содержание этого экзамена было обновлено 9 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Описание понятий cloud (20-25%)
+- Описание основных служб Azure (15-20%)
+- Описание основных решений и средств управления в Azure (10-15%)
+- Описание функций общей безопасности и функций безопасности сети (10-15%)
+- Описание функций удостоверения, управления, конфиденциальности и соответствия (20-25%)
+- Описание управления затратами Azure и Service Level Agreements (10-15%)
 roles:
+- administrator
+- business-user
 - developer
+- student
+- technology-manager
 products:
 - azure
 courses:
