--- a/learn-certs-pr/exams/dp-100.yml
+++ b/learn-certs-pr/exams/dp-100.yml
@@ -12,6 +12,8 @@ summary: |-
   </div>
 
   Azure Data Scientist применяет свои знания в области data science и машинного обучения для внедрения и выполнения рабочих нагрузок машинного обучения в Azure; в частности, с помощью службы машинного обучения Azure. Это включает планирование и создание подходящей рабочей среды для специалистов в области data science в Azure, проведение экспериментов с данными и обучение прогнозным моделям, управление моделями и их оптимизацию, а также внедрение моделей машинного обучения в производство.
+
+  У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [«Кредиты колледжа от ACE за сертификационные экзамены»](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: настройка рабочего пространства в Azure Machine Learning; проведение экспериментов и моделей обучения; оптимизация и управление моделями; и развертывание и использование модели.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjA
