--- a/learn-certs-pr/exams/dp-200.yml
+++ b/learn-certs-pr/exams/dp-200.yml
@@ -8,14 +8,14 @@ displayName: DP-200
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
   </div>
 
   Кандидатами на этот экзамен являются инженеры по обработке данных Microsoft Azure, которые совместно с представителями бизнеса определяют и выполняют требования к данным для реализации решений по работе с данными, использующих службы данных Azure.
 
   Специалисты по обработке данных Azure отвечают за реализацию задач, связанных с данными, которые включают предоставление услуг хранения данных, прием потоковых и пакетных данных, преобразование данных, внедрение требований безопасности, реализацию политик хранения данных, выявление узких мест производительности и доступ к внешним источникам данных.
 
-  Кандидаты на этот экзамен должны уметь реализовать решения по работе с данными, использующие следующие службы Azure&#58; Azure Cosmos DB, Azure SQL Database, Azure Synapse Analytics (бывший Azure SQL DW), Azure Data Lake Storage, Azure Data Factory, Azure Stream Analytics, Azure Databricks, и хранилище Azure Blob.
+  Кандидаты на этот экзамен должны уметь реализовывать решения для работы с данными, которые используют следующие службы Azure&#58; Azure Cosmos DB, Azure Synapse Analytics (ранее Azure SQL DW), Azure Data Factory, Azure Stream Analytics, Azure Databricks и Azure Blob storage.
 subTitle: 'Этот экзамен предполагает проверку ваших способностей выполнять следующие технические задачи: внедрение решений для хранения данных; управление и развитие обработки данных; мониторинг и оптимизация решений по работе с данными.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzx2
@@ -29,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Внедрение решений для хранения данных (40-45%)
 - Управление и развитие обработки данных (25-30%)
 - Мониторинг и оптимизация решений по работе с данными (30-35%)
