--- a/learn-certs-pr/exams/mb-901.yml
+++ b/learn-certs-pr/exams/mb-901.yml
@@ -16,6 +16,10 @@ summary: |-
   Кандидаты должны понимать функциональные возможности Dynamics 365 и облачных вычислений Microsoft.
 
   Кандидаты на сдачу этого экзамена должны иметь общие знания или соответствующий опыт работы в среде информационных технологий (IT). Кандидаты также должны иметь базовые знания бизнес-сценариев и опыт работы с бизнес-требованиями, законодательными требованиями и требованиями к безопасности для IT-проектов.
+
+  У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [«Кредиты колледжа от ACE за сертификационные экзамены»](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
+
+  <div><br/><strong>ПРИМЕЧАНИЕ&#58; Microsoft не будет менять упоминания Common Data Service на Microsoft Dataverse в настоящее время.</strong></div>
 subTitle: Данный экзамен оценивает ваше понимание Microsoft Dynamics 365; искусственного интеллекта; смешанной реальности; Платформы Power; концепции облачных вычислений; безопасности облачных решений; ролевой системы безопасности в Dynamics 365; Common Data Service; платформы управления данными; отчетности Dynamics 365; интеграций Dynamics 365 и развертывания облачных решений.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4n1DO
@@ -41,7 +45,10 @@ skills:
 - Описание управляемых моделями приложений (25-30%)
 - Описание приложений для финансов и операций (25-30%)
 roles:
+- business-owner
+- business-user
 - functional-consultant
+- student
 products:
 - dynamics-365
 courses:
