--- a/learn-certs-pr/exams/md-101.yml
+++ b/learn-certs-pr/exams/md-101.yml
@@ -15,6 +15,8 @@ summary: |-
   Будучи администраторами, кандидаты регулярно сотрудничают с администратором Microsoft 365 Enterprise в проектировании и реализации стратегии для устройств, которые соответствуют бизнес-целям современной организации.
 
   Кандидаты должны быть знакомы с рабочими пространствами Microsoft 365, должны обладать навыками и опытом в развертывании, настройке и поддержке устройств и технологий под Windows 10 и другими ОС.
+
+  У вас может быть право на получение кредитов колледжа от ACE после сдачи этого сертификационного экзамена. Перейдите на страницу [Кредиты колледжа от ACE за сертификационные экзамены](/learn/certifications/ace-credit-for-certification-exams), чтобы узнать больше.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: развертывание и обновление операционных систем; управление политиками и профилями; управление и защита устройств; а также управление приложениями и данными. Если вы сдали Exam 70-698 до его истечения 31 марта 2019 года, вам нужно всего лишь сдать MD-101, чтобы получить сертификат по современным ПК.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVD
