--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -7,16 +7,14 @@ uid: exam.ms-700
 displayName: MS-700
 summary: |-
   <div><div style='color&#58; red;'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.<br/><br/></div>
   </div>
 
-  Кандидаты на этот экзамен являются Microsoft Teams Administrator [администраторы Microsoft Teams] в своей организации. Microsoft Teams Administrator [Администратор Microsoft Teams] настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
+  Microsoft Teams Administrator [Администратор Microsoft Teams] настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
 
-  Teams Administrator [Администратор Teams] должен быть способным планировать, развертывать и управлять командами в чате, приложениях, каналах, на собраниях, аудиоконференциях, интерактивных мероприятиях и вызовах. Администратор Teams также отвечает за обновление Skype for Business для команд.
+  Teams Administrator [Администратор Teams] должен быть способным планировать, развертывать и управлять командами в чате, приложениях, каналах, на собраниях, аудиоконференциях, интерактивных мероприятиях и вызовах. Администратор Teams также отвечает за обновление Skype for Business для команд. Кандидаты на этот экзамен должны быть экспертами в управлении параметрами Teams с использованием PowerShell. Teams Administrator обладает фундаментальным пониманием точек интеграции с приложениями и службами, включающими, среди прочего, SharePoint, OneDrive, Exchange, Azure AD и группы Office 365. Teams Administrator понимает, как интегрировать внешние приложения и службы.
 
   Teams Administrator [Администратор Teams] сотрудничает с инженерами телефонии, чтобы интегрировать расширенные функции голосовой связи в Microsoft Teams. Эта роль не отвечает за настройку прямой маршрутизации, настройку маршрутизации вызовов или интеграцию телефонии. Teams Administrator [Администратор Teams] может работать с другими ролями администратора рабочей нагрузки, включая безопасность и соответствие требованиям, обмен сообщениями, работу в сети, идентификацию и устройства.
-
-  Кандидаты на этот экзамен должны уметь управлять настройками Teams с помощью PowerShell. Администратор команд должен обладать базовыми знаниями о точках интеграции с приложениями и службами, включая, помимо прочего, SharePoint, OneDrive for Business, Exchange, Azure AD, и Office 365 Groups. Teams Administrator [Администратор Teams] понимает, как интегрировать внешние приложения и сервисы.
 subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и настройка среды Microsoft Teams; управление чатом, звонками и встречами; и управление политиками Teams и приложений.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43VcF
@@ -31,7 +29,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 24 ноября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Планирование и настройка среды для Microsoft Teams (45-50%)
 - Управление чатом, звонками и встречами (30-35%)
 - Управление политиками команд и приложений (20-25%)
