--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -11,6 +11,8 @@ summary: |-
   <div><strong>Данная сертификация будет аннулирована 31 август 2020 года. Вы больше не сможете получить данный сертификат после этой даты. Любые сертификаты, полученные вами до даты отмены сертификации, будут по-прежнему отображаться в вашей выписке об успеваемости в<a href="https://aka.ms/certdashboard"> панели Сертификации</a>.</strong><br/><br/></div></div>
 
   Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365. Кандидаты внедряют компоненты решения, включая усовершенствование приложений, пользовательский интерфейс, системные интеграции, преобразование данных, пользовательскую автоматизацию процессов и пользовательские визуализации.
+
+  <div><strong><br/>В связи с отменой этой сертификации 31 декабря 2020 года Microsoft не будет менять упоминания Common Data Service на Microsoft Dataverse.</strong></div>
 subTitle: Разработчики, работающие с Microsoft Power Apps и Dynamics 365, несут ответственность за проектирование, разработку, защиту и расширение реализации Dynamics 365.
 levels:
 - intermediate
